--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,10 @@
       {
         "source": "/api/create",
         "function": "register"
+      },
+      {
+        "source": "**",
+        "destination": "/index.html"
       }
     ]
   }
